--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
+/* CSS HEX */
+--melon: #ffcfc2ff;
+--raisin-black: #222430ff;
+--seashell: #fff6f2ff;
+--rhythm: #857c8dff;
+--pewter-blue: #95afb2ff;
+
 *{
-  background-color: #fff6f2;
+  background-color: seashell;
 }
 
 h1{
