--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* CSS HEX */
 --melon: #ffcfc2ff;
 --raisin-black: #222430ff;
---seashell: #fff6f2ff;
+--seashell: #FFF6F2;
 --rhythm: #857c8dff;
 --pewter-blue: #95afb2ff;
 
