--- a/style.css
+++ b/style.css
@@ -18,3 +18,13 @@ h1{
 p{
   font-family: "Didot", serif;
 }
+
+/* Header/Logo Title */
+.header {
+  padding: 60px;
+  text-align: center;
+  background: #ffcfc2ff;
+  color: #222430ff;
+  font-size: 10px;
+}
+
