--- a/style.css
+++ b/style.css
@@ -13,10 +13,12 @@ body {
 h1{
   font-weight: bold;
   font-family: "Didot", serif;
+  text-align: center;
 }
 
 p{
   font-family: "Didot", serif;
+  text-align: ;
 }
 
 /* Header/Logo Title */
