--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* CSS HEX */
 /*--melon: #ffcfc2ff;
---raisin-black: #222430ff;
+--raisin-black: #282321;
 --seashell: #FFF5F2;
 --rhythm: #857c8dff;
 --pewter-blue: #95afb2ff;*/
