--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ p{
   font-size: 30px;
 }
 
-.image {
+.skincare-image {
   text-shadow: 2px 2px #95afb2ff;
   background-size: cover;
   background-position: center;
