--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
 }
 
 header {
+  margin:  0px;
   background-color: #FAF2ED;
   border-bottom: 3px solid #F0E1D8;
   border-top: 3px solid #F0E1D8;
@@ -65,7 +66,7 @@ p{
   padding: 10px;
 }
 
-/*.skincare {
+.skincare {
   margin: 530 520;
 }
 
@@ -75,7 +76,7 @@ p{
 
 .makeup {
   margin: 530 520;
-}*/
+}
 
 /* Header/Logo Title */
 .header {
