--- a/style.css
+++ b/style.css
@@ -68,11 +68,16 @@ p{
 }
 
 .skincare {
-  margin: 530 520;
+  margin: 530 520px;
+  width: 300px;
+  height: 200px;
+  padding: 100 100px;
 }
 
 .skincare-image{
-  padding: 500 300;
+  margin: auto;
+  text-align: center;
+  padding:  100 100px;
 }
 
 .hera {
