--- a/style.css
+++ b/style.css
@@ -72,11 +72,13 @@ p{
   width: 300px;
   height: 200px;
   padding: 100 100px;
+  text-align: center;
 }
 
 .skincare-image{
-  margin: auto;
-  text-align: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   padding:  100 100px;
 }
 
