--- a/style.css
+++ b/style.css
@@ -68,18 +68,11 @@ p{
 }
 
 .skincare {
-  margin: 530 520px;
-  width: 300px;
-  height: 200px;
-  padding: 100 100px;
-  text-align: center;
+  margin: 530 520;
 }
 
-.center{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  padding:  100 100px;
+.skincare-image{
+  padding: 500 300;
 }
 
 .hera {
