--- a/style.css
+++ b/style.css
@@ -63,9 +63,11 @@ h3{
 
 p{
   font-family: 'Anek Devanagari', sans-serif;
+  font-size: 130%;
   text-align: center;
   color: #282321;
   padding: 10px;
+
 }
 
 .skincare {
@@ -77,6 +79,23 @@ p{
   margin-left: auto;
   margin-right: auto;
   width: 75%;
+  height: auto;
+}
+
+.nomakeup-image{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+  height: auto;
+}
+
+.HERA-image{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 35%;
+  height: auto;
 }
 
 .hera {
