--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 --champange-pink: #FAF2ED;*/
 
 body {
-  background: #FFF5F2;
+  background: #F0E1D8;
   overflow: scroll;
   margin: 0px;
 }
@@ -135,4 +135,9 @@ p{
   font-family: 'Marcellus', serif;
 }
 
-
+.blogs{
+  background-color: #FFF5F2;
+  padding: 200px;
+  border: 15px solid ;
+  border-radius: 15px;
+}
