--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@ p{
   margin-right: auto;
   width: 75%;
   height: auto;
+  position: relative;
 }
 
 .nomakeup-image{
@@ -101,6 +102,7 @@ p{
   margin-right: auto;
   width: 90%;
   height: auto;
+  position: relative;
 }
 
 .HERA-image{
@@ -109,6 +111,7 @@ p{
   margin-right: auto;
   width: 35%;
   height: auto;
+  position: relative;
 }
 
 .hera {
