--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ p{
 
 .skincare {
   margin: 530 520;
+  background-color: #4E2B22;
 }
 
 .skincare-image{
@@ -105,10 +106,12 @@ p{
 
 .hera {
   margin: 530 520;
+  background-color: #4E2B22;
 }
 
 .makeup {
   margin: 530 520;
+  background-color: #4E2B22;
 }
 
 /* Header/Logo Title */
