--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ p{
 
 .skincare {
   margin: 530 520;
-  background-color: #4E2B22;
+  background-color: #FAF2ED;
 }
 
 .skincare-image{
@@ -99,12 +99,12 @@ p{
 
 .hera {
   margin: 530 520;
-  background-color: #4E2B22;
+  background-color: #FAF2ED;
 }
 
 .makeup {
   margin: 530 520;
-  background-color: #4E2B22;
+  background-color: #FAF2ED;
 }
 
 /* Header/Logo Title */
