--- a/style.css
+++ b/style.css
@@ -86,14 +86,17 @@ p{
 }
 
 .skincare-image{
+  text-align: center;
   position: relative;
 }
 
 .nomakeup-image{
+  text-align: center;
   position: relative;
 }
 
 .HERA-image{
+  text-align: center;
   position: relative;
 }
 
