--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ p{
 
 .skincare {
   margin: 530 520;
-  background-color: #FAF2ED;
+  background-color: #D5CABD;
 }
 
 .skincare-image{
@@ -102,12 +102,12 @@ p{
 
 .hera {
   margin: 530 520;
-  background-color: #FAF2ED;
+  background-color: #D5CABD;
 }
 
 .makeup {
   margin: 530 520;
-  background-color: #FAF2ED;
+  background-color: #D5CABD;
 }
 
 /* Header/Logo Title */
