--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ p{
 
 .skincare {
   margin: 530 520;
-  background-color: #E6C1C0;
+  background-color: #F0E1D8;
 }
 
 .skincare-image{
@@ -104,12 +104,12 @@ p{
 
 .hera {
   margin: 530 520;
-  background-color: #E6C1C0;
+  background-color: #F0E1D8;
 }
 
 .makeup {
   margin: 530 520;
-  background-color: #E6C1C0;
+  background-color: #F0E1D8;
 }
 
 /* Header/Logo Title */
