--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 --champange-pink: #FAF2ED;*/
 
 body {
-  background: #FFF5F2;
+  background: #F0E1D8;
   overflow: scroll;
   margin: 0px;
 }
@@ -84,12 +84,11 @@ p{
   font-family: 'Barlow', sans-serif;
   font-weight: 100;
   border-radius: 5px;
-
 }
 
 .skincare {
   margin: 530 520;
-  background-color: #F0E1D8;
+  background-color: #FFF5F2;
 }
 
 .skincare-image{
@@ -109,12 +108,12 @@ p{
 
 .hera {
   margin: 530 520;
-  background-color: #F0E1D8;
+  background-color: #FFF5F2;
 }
 
 .makeup {
   margin: 530 520;
-  background-color: #F0E1D8;
+  background-color: #FFF5F2;
 }
 
 /* Header/Logo Title */
