--- a/style.css
+++ b/style.css
@@ -135,7 +135,8 @@ p{
 .title{
   font-family: 'Marcellus', serif;
   text-align: left;
-  margin-left: 5px;
+  margin-left: 15px;
+  padding-top: 10px;
 }
 
 
