--- a/style.css
+++ b/style.css
@@ -68,7 +68,8 @@ p{
   text-align: center;
   color: #282321;
   padding: 10px;
-
+  margin-left: 600px;
+  margin-right: 600px;
 }
 
 .subsection {
