--- a/style.css
+++ b/style.css
@@ -93,6 +93,8 @@ p{
   margin: 530 520;
   background-color: #F0E1D8;
   border-radius: 15px;
+  margin-left: 700;
+  margin-right: 700;
 }
 
 .skincare-image{
