--- a/style.css
+++ b/style.css
@@ -68,8 +68,7 @@ p{
   text-align: center;
   color: #282321;
   padding: 10px;
-  margin-left: 600;
-  margin-right: 600;
+  background-color: #F0E1D8;
 
 }
 
@@ -93,8 +92,6 @@ p{
   margin: 530 520;
   background-color: #F0E1D8;
   border-radius: 15px;
-  margin-left: 1700;
-  margin-right: 1700;
 }
 
 .skincare-image{
