--- a/style.css
+++ b/style.css
@@ -89,7 +89,8 @@ p{
 }
 
 .skincare {
-  margin: 530 520;
+  margin-left: 1000;
+  margin-right: 1000;
   background-color: #F0E1D8;
   border-radius: 15px;
 }
@@ -116,13 +117,15 @@ p{
 }
 
 .hera {
-  margin: 530 520;
+  margin-left: 1000;
+  margin-right: 1000;
   background-color: #F0E1D8;
   border-radius: 15px;
 }
 
 .makeup {
-  margin: 530 520;
+  margin-left: 1000;
+  margin-right: 1000;
   background-color: #F0E1D8;
   border-radius: 15px;
 }
