--- a/style.css
+++ b/style.css
@@ -89,8 +89,8 @@ p{
 }
 
 .skincare {
-  margin-left: 5000;
-  margin-right: 5000;
+  margin-left: 5000px;
+  margin-right: 5000px;
   background-color: #F0E1D8;
   border-radius: 15px;
 }
@@ -117,15 +117,15 @@ p{
 }
 
 .hera {
-  margin-left: 5000;
-  margin-right: 5000;
+  margin-left: 5000px;
+  margin-right: 5000px;
   background-color: #F0E1D8;
   border-radius: 15px;
 }
 
 .makeup {
-  margin-left: 5000;
-  margin-right: 5000;
+  margin-left: 5000px;
+  margin-right: 5000px;
   background-color: #F0E1D8;
   border-radius: 15px;
 }
