--- a/style.css
+++ b/style.css
@@ -93,7 +93,8 @@ p{
   margin-right: 150px;
   background-color: #F0E1D8;
   border-radius: 15px;
-  border-bottom: 15px;
+  border-bottom-right-radius: 15px;
+  border-bottom-left-radius: 15px;
 }
 
 .skincare-image{
@@ -122,6 +123,8 @@ p{
   margin-right: 150px;
   background-color: #F0E1D8;
   border-radius: 15px;
+  border-bottom-right-radius: 15px;
+  border-bottom-left-radius: 15px;
 }
 
 .makeup {
@@ -129,6 +132,8 @@ p{
   margin-right: 150px;
   background-color: #F0E1D8;
   border-radius: 15px;
+  border-bottom-right-radius: 15px;
+  border-bottom-left-radius: 15px;
 }
 
 /* Header/Logo Title */
