--- a/style.css
+++ b/style.css
@@ -144,5 +144,16 @@ p{
   text-align: left;
   margin-left: 15px;
   padding-top: 10px;
+}
 
-
+.bottom {
+  padding: 20px;
+  dislay: inline;
+  border-right: 6200px;
+  text-align: left;
+  box-sizing: border-box;
+  position: relative;
+  background: #FFCFC2;
+  color: #222430ff;
+  font-size: 15px;
+}
