--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ p{
   margin-left: 150px;
   margin-right: 150px;
   background-color: #F0E1D8;
+  border-radius: 15px;
 }
 
 .skincare-image{
@@ -119,12 +120,14 @@ p{
   margin-left: 150px;
   margin-right: 150px;
   background-color: #F0E1D8;
+  border-radius: 15px;
 }
 
 .makeup {
   margin-left: 150px;
   margin-right: 150px;
   background-color: #F0E1D8;
+  border-radius: 15px;
 }
 
 /* Header/Logo Title */
